# ndc-sendgrid

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh
.github/ISSUE_TEMPLATE/: config.yml  internal-issues-only.md
.github/workflows/: docker.yml
connector-definition/: Makefile  connector-metadata.yaml  docker-compose.yaml
crates/ndc-sendgrid/: Cargo.toml
crates/ndc-sendgrid/src/: configuration.rs  connector.rs  fields.rs  main.rs  mutation.rs  query.rs  schema.rs  sendgrid_api.rs
docs/: contributing.md  development.md  index.md  support.md
