[package]
name = "ndc-sendgrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", tag = "v0.1.0-rc.1" }

async-trait = "0.1"
prometheus = { version = "0.13" }
schemars = { version = "0.8", features = ["smol_str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
