[package]
name = "ndc-sendgrid"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs.git", tag = "v0.4.0" }

async-trait = "0.1"
prometheus = { version = "0.13" }
schemars = { version = "0.8", features = ["smol_str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
http = { version = "0.2" }
reqwest = { version = "0.12", features = ["json"] }
indexmap = "^2"
thiserror = { version = "*" } # Use the version from ndc-sdk
